--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-js-a2-2-npminit",
+  "name": "js-a2-2-npminit",
   "version": "1.0.0",
   "description": "- Node.js\r - git \r - Tool like Postman",
   "main": "app.js",
