--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/IIM-Creative-Technology/Node-js-A2-2-npmInit#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
