--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/IIM-Creative-Technology/Node-js-A2-2-npmInit#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "mongoose-unique-validator": "^3.1.0",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
